--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "prettier",
+    "plugin:prettier/recommended"
+
+  ],
+  "plugins": ["prettier"],
+  "rules": {"prettier/prettier": "warn", "camelcase": 0, "no-case-declarations": 0}
+
 }
