--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,9 @@
 {
-  "extends": [
-    "prettier",
-    "plugin:prettier/recommended"
-
-  ],
-  "plugins": ["prettier"],
-  "rules": {"prettier/prettier": "warn", "camelcase": 0, "no-case-declarations": 0}
-
+	"extends": ["prettier", "plugin:prettier/recommended"],
+	"plugins": ["prettier"],
+	"rules": {
+		"prettier/prettier": "warn",
+		"camelcase": 0,
+		"no-case-declarations": 0
+	}
 }
