--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
-		"next-router-mock": "^0.9.3",
+		"@types/jest": "^29.5.1",
 		"@types/node": "18.16.1",
 		"@types/react": "18.2.0",
 		"@types/react-dom": "18.2.1",
@@ -37,6 +37,7 @@
 		"history": "^5.3.0",
 		"jest": "^29.5.0",
 		"jest-environment-jsdom": "^29.5.0",
+		"next-router-mock": "^0.9.3",
 		"postcss": "8.4.23",
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.2.7",
